# LABA2

./: CMakeLists.txt  README.md
.github/workflows/: Build-Arch.yaml  release_all.yml
__MACOSX/02/: ._ip_filter.cpp
include/: config.h.in
src/: main.cpp  params.h  params.h.in  parse.cpp  parse.h  sorter.cpp  sorter.h
tests/: exists_test.cpp  test_main.cpp
